<resources>
    <string name="app_name">WhatsApp Clone</string>

    <string name="tab1">CALLS</string>
    <string name="tab2">CHATS</string>
    <string name="tab3">CONTACTS</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_new_group">New Group</string>
    <string name="action_new_broadcast">New broadcast</string>
    <string name="action_whatsapp_web">WhatsApp Web</string>
    <string name="action_starred_messages">Starred messages</string>
    <string name="action_status">Status</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_call_log">Clear call log</string>
    <string name="action_calls">Calls</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_without_icon">Without Icon</string>
    <string name="action_with_icon">With Icon</string>
    <string name="action_custom">Custom Tab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="ouda_wycliffe">Ouda Wycliffe</string>
    <string name="last_message_from_them">Last message from them</string>
    <string name="online">Online</string>
    <string name="type_a_message">Type a message</string>
    <string name="message">Message</string>
    <string name="more">More</string>
    <string name="video">Video</string>
    <string name="voice_call">Voice call</string>
    <string name="actions">Actions</string>
    <string name="view_contact">View Contact</string>
    <string name="media_links_and_docs">Media, links and docs</string>
    <string name="search">Search</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="starred_messages">Starred messages</string>
    <string name="settings">Settings</string>

</resources>