<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more_vert_foreground"
        android:title="@string/more"
        app:showAsAction="always">
        <menu>
            <item android:title="@string/new_group"/>
            <item android:title="@string/new_broadcast"/>
            <item android:title="@string/linked_devices"/>
            <item android:title="@string/starred_messages"/>
            <item android:title="@string/settings"/>
        </menu>
    </item>
</menu>