<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/video_call"
        android:icon="@drawable/ic_video_foreground"
        android:title="@string/video"
        app:showAsAction="always"/>

    <item
        android:id="@+id/voice_call"
        android:icon="@drawable/ic_call_foreground"
        android:title="@string/voice_call"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/chat_more"
        android:icon="@drawable/ic_more_vert_foreground"
        android:title="@string/actions"
        app:showAsAction="ifRoom">

        <menu >
            <item
                android:id="@+id/action_dropdown1"
                android:title="@string/view_contact" />
            <item
                android:id="@+id/action_dropdown2"
                android:title="@string/media_links_and_docs" />
            <item
                android:id="@+id/action_dropdown3"
                android:title="@string/search" />

            <item
                android:id="@+id/action_dropdown4"
                android:title="@string/mute_notifications" />

            <item
                android:id="@+id/action_dropdown5"
                android:title="@string/wallpaper" />
        </menu>
    </item>


</menu>