<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@color/colorPrimary"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabMaxWidth="0dp"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorHeight="4dp"
            app:tabSelectedTextColor="@color/colorTextPrimary"
            app:tabTextColor="@color/colorTextDisable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab1"
                android:icon="@drawable/tab_call_selector"
                style="@style/tab_item"
                android:text="@string/tab1" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab2"
                android:icon="@drawable/tab_chat_selector"
                style="@style/tab_item"
                android:text="@string/tab2" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab3"
                android:icon="@drawable/tab_contacts_selector"
                style="@style/tab_item"
                android:text="@string/tab3" />

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabLayout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>