<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    tools:context=".MessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#075E54"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lyt_back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:focusable="true">

            <ImageButton
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_arrow_left"
                app:tint="@color/white" />

<!--            <View-->
<!--                android:layout_width="5dp"-->
<!--                android:layout_height="0dp" />-->

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_user"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                app:strokeColor="@color/black"
                app:strokeWidth="0dp"
                android:src="@drawable/person"
                android:scaleType="fitXY"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp">

            <TextView
                app:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ouda_wycliffe"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="#F5F5F5" />

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:scrollbars="vertical"
            android:scrollingCache="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:rotation="180" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/item_input_parent"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginHorizontal="5dp"
        android:minHeight="46dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/item_input_card_parent"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="23dp"
            app:cardElevation="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/item_mic_card_parent"
            android:minHeight="46dp"
            android:layout_marginBottom="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/item_attachment_icon_container"
                    android:layout_toEndOf="@+id/item_emoji_icon_container"
                    android:minHeight="46dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:maxHeight="140dp"
                        android:autofillHints="Type..."
                        android:maxLines="6"
                        android:focusedByDefault="true"
                        android:scrollbars="vertical"
                        android:textColor="#757C82"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/message"
                        android:background="@android:color/transparent"
                        android:textColorHint="#757C82"
                        android:layout_centerVertical="true"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />

<!--                    <EditText-->
<!--                        android:id="@+id/item_input"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_alignParentBottom="true"-->
<!--                        android:layout_centerVertical="true"-->
<!--                        android:layout_marginEnd="10dp"-->
<!--                        android:background="@android:color/transparent"-->
<!--                        android:hint="@string/type_a_message"-->
<!--                        android:maxLines="6"-->
<!--                        android:paddingTop="10dp"-->
<!--                        android:paddingBottom="10dp"-->
<!--                        android:scrollbars="vertical"-->
<!--                        android:textColor="@color/material_dynamic_tertiary100"-->
<!--                        android:textColorHint="#757C82"-->
<!--                        android:textSize="16sp"-->
<!--                        android:importantForAutofill="no"-->
<!--                        android:autofillHints="Message"-->
<!--                        android:inputType="text" />-->

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_camera_icon_container"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:id="@+id/item_camera_icon"
                        app:srcCompat="@drawable/ic_camera_foreground"
                        app:tint="#757C82"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_attachment_icon_container"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:layout_toStartOf="@+id/item_camera_icon_container">

                    <ImageView
                        android:id="@+id/item_attachment_icon"
                        app:srcCompat="@drawable/ic_attach_clipboard_button"
                        app:tint="#757C82"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:layout_centerVertical="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_emoji_icon_container"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:paddingStart="5dp"
                    android:paddingEnd="10dp">

                    <ImageView
                        android:id="@+id/item_emoji_icon"
                        app:srcCompat="@drawable/ic_emoji_super_smile"
                        app:tint="#757C82"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true" />

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/item_mic_card_parent"
            app:cardBackgroundColor="#01AF9B"
            app:cardCornerRadius="23dp"
            app:cardElevation="0dp"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="4dp">

            <RelativeLayout
                android:id="@+id/item_mic_click_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/item_mic_icon"
                    app:srcCompat="@drawable/ic_mic_foreground"
                    app:tint="#FFFEFF"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</LinearLayout>